--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,7 +1,10 @@
+$background-color: #d3d3d3;
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    $background-color:$background-color
 }
 
 main {
