--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -2,6 +2,10 @@ form {
     border: 1px solid #545454;
     border-radius: 3px;
     padding: 40px;
+    
+    input{
+        background-color: #dfdfdf;
+    }
 }
 
 input {
